# openpose_train

./: .gitignore  README.md
.github/: issue_template.md
car/: README.md  a1_coco_jsonToNegativesJson.m  a2_valJsonsToImageValFolders.m  a_jsonToTrainValJsons.m  loadConfigParameters.m
detectron_to_masks/: README.md  create_pascal3dplus_json.m  drawPolygon.m  ensureBBoxContainment.m  fixDetContours.m  getDetectronSegmentation.m  getKeypointsLabelsAndSkeleton.m  merge_pascal3dplus.m  munkres.m  parseOutput.m  process_facemaskout.m  process_handdome.m  process_handmpii.m  temp.m  visualize_processed_annotations.m
detectron_to_masks/clipper2/private/clipper_ver6.4.2/cpp/: CMakeLists.txt  polyclipping.pc.cmakein
detectron_to_masks/clipper2/private/clipper_ver6.4.2/cpp/cpp_agg/: agg_conv_clipper.h  clipper_test.cpp  clipper_test.sln  clipper_test.vcxproj  clipper_test.vcxproj.filters
detectron_to_masks/clipper2/private/clipper_ver6.4.2/cpp/cpp_cairo/: Cairo Resources.txt  cairo.sln  cairo.vcxproj  cairo_clipper.cpp  cairo_clipper.hpp  libcairo-2.lib  main.cpp
detectron_to_masks/clipper2/private/clipper_ver6.4.2/cpp/cpp_console/: clipper_console_demo.cpp  clipper_console_demo.sln  clipper_console_demo.vcxproj
detectron_to_masks/clipper2/private/clipper_ver6.4.2/cpp/cpp_opengl/: clipper_demo.sln  clipper_demo.vcxproj  icon.res  main.cpp  menu.res
dome/: README.md  a_domeToCocoJson.py  coco_util.py  domeToCocoJson.py
dome_preparation/: b_runOPOnDome.py
experimental_models/: README.md
face/: General_info_datasets.txt  README.md  a1_datasetToJsonFormat.py  (+4 more)
(+261 files in other folders)
